--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ h1{
     font-size: 50px;
     margin: 0;
 }
+h2{
+    font-size: 25px;
+}
 .orange-color{
   color: orange;  
 }
@@ -32,4 +35,24 @@ h1{
 .about-me{
     background-image: url(images/shapes/7.png);
     background-repeat: no-repeat;
+}
+.recipies{
+    text-align: center;
+}
+.recipe-item{
+    width: 20%;
+    margin-right: 10%;
+    margin-left: 10%;
+    padding-left: 17px;
+    padding-top: 1%;
+    border-radius: 20px;
+    box-shadow: 5px 5px 20px gray;
+}
+.recipe-item img{
+    width: 90%;
+}
+.food-network{
+    text-align: center;
+    background-color: black;
+    color: silver;
 }
