--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ h2{
 }
 .flexible-container{
     display: flex;
+    margin-bottom: 60px;
+
 }
 .half-width{
     width: 50%;
@@ -38,6 +40,8 @@ h2{
 }
 .recipies{
     text-align: center;
+    margin-left: 30%;
+    margin-right: 30%;
 }
 .recipe-item{
     width: 20%;
