--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0%;
 }
 h1{
     font-size: 50px;
@@ -21,10 +22,10 @@ h2{
     padding: 10%;
 }
 .half-width img{
-    width: 120%;
+    width: 80%;
 }
 .person-pic{
-    width: 20%;
+    width: 79%;
 }
 .link-button{
     text-decoration: none;
@@ -44,16 +45,17 @@ h2{
     margin-right: 30%;
 }
 .recipe-item{
-    width: 20%;
-    margin-right: 10%;
-    margin-left: 10%;
-    padding-left: 17px;
+    width: 50%;
+    margin-right: 4%;
+    margin-left: 4%;
+    padding-left: 18px;
     padding-top: 1%;
+    padding-right: 1%;
     border-radius: 20px;
     box-shadow: 5px 5px 20px gray;
 }
 .recipe-item img{
-    width: 90%;
+    width: 100%;
 }
 .food-network{
     text-align: center;
