--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ h1{
 }
 h2{
     font-size: 25px;
+    color: gray;
 }
 .orange-color{
   color: orange;  
@@ -38,17 +39,18 @@ h2{
 .about-me{
     background-image: url(images/shapes/7.png);
     background-repeat: no-repeat;
+    text-align: justify;
 }
 .recipies{
     text-align: center;
-    margin-left: 30%;
-    margin-right: 30%;
+    margin-left: 25%;
+    margin-right: 25%;
 }
 .recipe-item{
-    width: 50%;
+    width: 40%;
     margin-right: 4%;
     margin-left: 4%;
-    padding-left: 18px;
+    padding-left: 1%;
     padding-top: 1%;
     padding-right: 1%;
     border-radius: 20px;
